WFNEWS-1731 : Fixing notification map spacing across platforms (#1561)
* Fix spacing and handle exception

* Update map svg

* Fix buttons and map sizing for notification map

* Remove logging

--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -525,10 +525,7 @@ html {
 
 .mat-mdc-dialog-container {
   // height: 70vh !important;
-  padding-top: env(safe-area-inset-top, 20px) !important;
-  padding-bottom: env(safe-area-inset-bottom, 20px) !important;
-  padding-left: env(safe-area-inset-left) !important;
-  padding-right: env(safe-area-inset-right) !important;
+  padding: 0 !important;
   overflow: auto !important;
 
   .mdc-dialog__surface {
